--- a/hotelreact/src/App.css
+++ b/hotelreact/src/App.css
@@ -9,13 +9,13 @@
 .content{
   width: 100%;
 }
-header {
+.header {
   display: flex;
   align-items: center;
   justify-content: space-between;
   margin-bottom: 20px;
 }
-.header{
+header{
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -69,4 +69,7 @@ table tr:hover {
   font-size: 24px;
   font-weight: bold;
   margin-bottom: 20px;
+}
+span{
+  background-color: aquamarine;
 }
